Amarok ChangeLog
================
(C) 2002-2024 the Amarok authors.


VERSION 2.9.90
  FEATURES:

  CHANGES:

  BUGFIXES:

VERSION 2.9.82
  FEATURES:
   * Enable dragging and dropping tracks from context view to playlist again. (BR 439736)
   * Add menu entry for collapsing all expanded items in collection view. (BR 244509)
   * Show song progress on OSD (BR 278445), make only background translucent (BR 187781)
   * Allow copying track details by clicking on current track context applet. (BR 283457)
   * Allow drag&drop rearranging in queue editor. (BR 263563)
   * Added support for FFmpeg 5.0. (BR 459933)
   * Added support for TagLib 2.0.

  CHANGES:
   * Amarok now depends on TagLib 1.12, Qt 5.15, and KDE Frameworks 5.77.
   * Wide-ranging changes to remove usages of deprecated methods of Qt and
     KDE Frameworks, that should not affect functionality.
   * Removed upnpcollectionplugin.
   * Non-functional OSD positioning settings disabled in UI on Wayland for now.
   * Unified OSD to use system-styled rating stars. Also use higher DPI for images.
   * The scripting engine has been ported from QtScript to QJSEngine. This is a work in
     progress, and previous scripts are often not compatible. The script API documented
     at https://community.kde.org/Amarok/Development/Script_API is partially out of date.
     Additionally, due to incompatibilities and other issues, KNewStuff downloading of
     scripts is disabled for the time being.

  BUGFIXES:
   * Fix playlist generator UI strings. (BR 423598)
   * Fix potential corruption of Ogg files by requiring a recent-enough TagLib
     version (BR 397184).
   * Fix TagLib Extras to be treated as optional and not required for building Amarok.
   * Various fixes for e.g. crashes (including BR 428769, BR 444408, BR 468303, BR 477180,
     BR 393080, BR 446543), problems of playback stalling on missing files (including
     fix for BR 438651), context applets (BR 420964, BR 195338) UI bugs (e.g.