@@ -20,10 +20,39 @@
  */
 
 #include "PhotosEngine.h"
+#include "Version.h"
 
+#include <QNetworkAccessManager>
+#include <QQmlEngine>
 #include <QQmlExtensionPlugin>
-
+#include <QQmlNetworkAccessManagerFactory>
 #include <qqml.h>
+
+
+// User-Agent header needed to avoid 403 Forbidden on some photos when QML Image fetches from Flickr
+// Using NetworkAccessManagerProxy might have been nicer, but QML runs in different thread than The::networkAccessManager
+// so this is simpler.
+class PhotoAppletNetworkManager : public QNetworkAccessManager
+{
+public:
+    PhotoAppletNetworkManager(QObject *parent) : QNetworkAccessManager(parent) { }
+    QNetworkReply *createRequest( Operation op, const QNetworkRequest &req, QIODevice * outgoingData=0 ) override
+    {
+        QNetworkRequest newreq=req;
+        newreq.setRawHeader("User-Agent", ( ( QStringLiteral( "Amarok/" ) + AMAROK_VERSION ) ).toUtf8() );
+        QNetworkReply *reply = QNetworkAccessManager::createRequest( op, newreq, outgoingData );
+        return reply;
+    }
+};
+
+class PhotoAppletNetworkAccess : public QQmlNetworkAccessManagerFactory
+{
+public:
+    QNetworkAccessManager *create(QObject *parent) override
+    {
+        return new PhotoAppletNetworkManager(parent);
+    }
+};
 
 
 class PhotosPlugin : public QQmlExtensionPlugin
@@ -41,7 +70,7 @@ public:
 
     static QObject *photos_engine_provider(QQmlEngine *engine, QJSEngine *scriptEngine)
     {
-        Q_UNUSED(engine)
+        engine->setNetworkAccessManagerFactory(new PhotoAppletNetworkAccess);
         Q_UNUSED(scriptEngine)
 
         return new PhotosEngine();
